@@ -1,4 +1,0 @@
-$NetBSD$
-
-SHA1 (blackbook-3.tar.gz) = a9266dd9e89cc97a05aa763f6370b14fd0dbdbc4
-Size (blackbook-3.tar.gz) = 74665 bytes
