@@ -1,4 +1,4 @@
-$NetBSD: CHANGES,v 1.5394 2004/03/31 12:39:00 recht Exp $
+$NetBSD: CHANGES,v 1.5395 2004/03/31 13:24:31 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2004:
 
@@ -1638,3 +1638,4 @@ Changes to the packages collection and infrastructure in 2004:
 	Updated mplayer to 1.0rc3nb2 [wiz 2004-03-31]
 	Updated gmplayer to 1.0rc3nb2 [wiz 2004-03-31]
 	Updated mencoder to 1.0rc3nb2 [wiz 2004-03-31]
+	Removed blackbook [jmmv 2004-03-31]
